[project]
name = "nemo-diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.4",
    "ffmpeg-python>=0.2.0",
    "nemo-toolkit",
    "numpy>=2.2.6",
    "packaging>=25.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "whisperx>=3.7.4",
]

[tool.uv.sources]
nemo-toolkit = { git = "https://github.com/NVIDIA/NeMo" }
