[project]
name = "nemo-diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arpa>=0.1.0b4",
    "braceexpand>=0.1.7",
    "cloudpickle>=3.1.1",
    "cython>=3.1.4",
    "datasets>=4.2.0",
    "editdistance>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "fiddle>=0.3.0",
    "hydra-core",
    "ipython>=9.6.0",
    "jiwer>=4.0.0",
    "kaldialign>=0.9.2",
    "kenlm",
    "lhotse>=1.31.1",
    "librosa>=0.11.0",
    "megatron-core[mlm]",
    "nemo-toolkit",
    "numpy>=2.2.6",
    "nv-one-logger-pytorch-lightning-integration",
    "nvidia-modelopt[hf]>=0.37.0",
    "packaging>=25.0",
    "psutil>=7.1.0",
    "pyctcdecode",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "webdataset>=1.0.2",
    "whisperx>=3.7.4",
]

[project.optional-dependencies]
mlm = []
dev = []

[tool.uv.sources]
nemo-toolkit = { git = "https://github.com/NVIDIA/NeMo" }
hydra-core = { git = "https://github.com/facebookresearch/hydra" }
megatron-core = { git = "https://github.com/NVIDIA/Megatron-LM", rev = "training-moe-june2025" }
nv-one-logger-pytorch-lightning-integration = { git = "https://github.com/justadri/nv-one-logger", subdirectory = "nv_one_logger/one_logger_pytorch_lightning_integration" }
pyctcdecode = { git = "https://github.com/mediacatch/pyctcdecode" }
kenlm = { git = "https://github.com/ming030890/kenlm" }
