[project]
name = "nemo-diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "braceexpand",
    "cloudpickle",
    "cython",
    "datasets",
    "editdistance",
    "ffmpeg-python",
    "fiddle",
    "hydra-core",
    "ipython",
    "jiwer",
    "kaldialign",
    "lhotse",
    "librosa",
    "megatron-core[mlm]",
    "nemo-toolkit",
    "numpy",
    "nv-one-logger-pytorch-lightning-integration",
    "nvidia-modelopt[hf]",
    "packaging",
    "psutil",
    "torch",
    "torchaudio~=2.8.0",
    "tqdm",
    "webdataset",
    "whisperx",
]


[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv.sources]
nemo-toolkit = { git = "https://github.com/NVIDIA/NeMo" }
hydra-core = { git = "https://github.com/facebookresearch/hydra" }
megatron-core = { git = "https://github.com/NVIDIA/Megatron-LM", rev = "training-moe-june2025" }
nv-one-logger-pytorch-lightning-integration = { git = "https://github.com/justadri/nv-one-logger", subdirectory = "nv_one_logger/one_logger_pytorch_lightning_integration" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'Darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'Linux'" },
]
